fixed format on resume and adjusted footer spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -181,6 +181,7 @@ nav {
 
 .mainContainer {
   height: calc(94vh - 10px);
+  flex-grow: 1;
   width: 75%;
   margin: auto;
 }
